# neuron-segmentation

./: .gitignore  LICENSE  README.md  requirements.txt
.Trash-1000/files/: features.pkl  ldn_last_raw_value.pkl  ldn_model.pkl  ny_model.pkl
.Trash-1000/info/: 7.jpg.trashinfo  artifacts.trashinfo  features.pkl.trashinfo  ldn_last_raw_value.pkl.trashinfo  ldn_last_values.pkl.trashinfo  ldn_model.pkl.trashinfo  model 1.trashinfo  model.trashinfo  model_artifacts 1.trashinfo  model_artifacts.trashinfo  model_keras_mnist.keras.trashinfo  movie_titles.csv.trashinfo  ny_last_raw_value.pkl.trashinfo  ny_last_values.pkl.trashinfo  ny_model.pkl.trashinfo  train_data_matrix.npy.trashinfo
ai-studio-fundamentals/: Iris flowers classification.ipynb
code/: CMakeLists.txt  app.cpp  request.h  request_browser.cpp  request_desktop.cpp
data-science-and-machine-learning/: README.md
data-science-and-machine-learning/A tale of two cities analyzing trends/: README.md
data-science-and-machine-learning/Iris flowers classification/: README.md
data-science-and-machine-learning/Recommender Systems/: README.md
data-science-and-machine-learning/Spam Detection and NLP/: README.md
data-science-and-machine-learning/[MLFlow] MNIST with Keras/: README.md
data-science-and-machine-learning/covid_movement_patterns_with_var/: README.md
data-science-and-machine-learning/handwritten_digit_classification_with_keras/: README.md
data-science-and-machine-learning/iris_flowers_classification_with_svm/: README.md
data-science-and-machine-learning/recommender_systems_with_tensorflow/: README.md
data-science-and-machine-learning/spam_detection_with_NLP/: README.md  requirements.txt
data/swc/shao_chen/: U20180622G2.CNG.swc  (+27 more)
demo/: index.html  neuron_segmentation_demo.js  neuron_segmentation_demo.wasm
demo/images/: list.txt
docs/: README.md
gen-ai/agentic_rag_with_langchain_and_smolagents/: README.md
generative-ai/agentic_rag_with_langchain_and_smolagents/: requirements.txt
generative-ai/agentic_rag_with_trt-llm_and_langgraph/: README.md  requirements.txt
generative-ai/automated_evaluation_with_structured_outputs/: README.MD  requirements.txt  secrets.yaml
generative-ai/galileo/: .gitignore  LICENSE  README.md
generative-ai/galileo/00-vanilla-rag-with-langchain-and-galileo/demo/vanilla-rag-streamlit-webapp/: main.py  pyproject.toml
generative-ai/galileo/03-text-generation-with-langchain/demo/: README.md  main.py  pyproject.toml
hackathon-sample-projects/MLflow/: nb_simple_mlflow.ipynb
hackathon-sample-projects/hackathon-retail-MNIST/: README.md  fashion_mnist_comparison.ipynb  requirements.txt
ngc-integration/: README.md
ngc-integration/audio_translation_with_nemo_models/: README.md
ngc-integration/stock_analysis_with_pandas_and_cuDF/: README.md
notebooks/: 00_Data_Generation.ipynb  01_Model_Training.ipynb  02_Deploy.ipynb  onnx_pyfunc_model.py  userconfig.py
(+224 files in other folders)
