[tool.poetry]
name = "vanilla-rag-streamlit-webapp"
version = "0.1.0"
description = ""
authors = ["ata-turhan <ata.turhan@hp.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "1.45.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
